--- a/cms/requirements.txt
+++ b/cms/requirements.txt
@@ -7,6 +7,7 @@ Django==5.0.6
 django-braces==1.15.0
 django-debug-toolbar==4.4.2
 django-embed-video==1.4.10
+djangorestframework==3.15.1
 filelock==3.14.0
 identify==2.5.36
 idna==3.7
